@@ -6,6 +6,12 @@ compileJava {
     ]
 }
 
+javadoc {
+    // Javadoc also needs access to internal APIs - but Java 8 javadoc doesn't support --add-exports
+    // So we exclude the file that uses internal APIs from javadoc generation
+    exclude '**/PerfReaderImpl.java'
+}
+
 dependencies {
     implementation libs.slf4j
     implementation libs.asm
